# fuyu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: minimal.rs
examples/assets/: Cargo.toml
examples/assets/minimal/: Cargo.toml
examples/assets/minimal/src/: lib.rs
examples/minimal/: main.rs
examples/mods/src/: Cargo.toml
examples/mods/src/mod_a/: Cargo.toml
examples/mods/src/mod_a/src/: lib.rs
examples/mods/src/mod_b/: Cargo.toml
examples/mods/src/mod_b/src/: lib.rs
src/: applicator.rs  cargo.rs  dylib.rs  exceptions.rs  lib.rs  main.rs  plugin.rs  registrar.rs  repo.rs  repository.rs  services.rs
