[package]
name = "hachiya"
version = "0.1.0"
edition = "2024"

[lints.clippy]
needless_doctest_main = "allow"

[dependencies]
bevy = { version = "0.18", features = ["file_watcher"] }
camino = "1.2.2"
cargo_metadata = "0.23.1"
libloading = "0.8"
stabby = { version = "72.1.1", features = ["libloading"] }
thiserror = "2.0.17"
